added username option to login

--- a/html/login.html
+++ b/html/login.html
@@ -15,7 +15,7 @@
     <div class="all">
         <div class="form">
             <form action="login">
-                <p>Email Address</p>
+                <p>Username or Email Address</p>
                 <input type="text">
                 <p>Password</p>
                 <input type="text"><br><br>
