--- a/html/login.html
+++ b/html/login.html
@@ -6,7 +6,7 @@
     <title>Login</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="../css/login.css">
-    <script src="main.js"></script>
+    <script src="../login/login.js"></script>
 </head>
 <body>
     <header>
