--- a/html/index.html
+++ b/html/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Login</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="../css/login.css">
-    <script src="../login/login.js"></script>
+    <link rel="stylesheet" type="text/css" media="screen" href="../css/index.css">
+    <script src="../js/index.js"></script>
 </head>
 <body>
     <header>
