--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Login</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="../css/index.css">
-    <script src="../js/index.js"></script>
+    <link rel="stylesheet" type="text/css" media="screen" href="./css/index.css">
+    <script src="./js/index.js"></script>
 </head>
 <body>
     <header>
@@ -16,11 +16,12 @@
         <div class="form">
             <form action="login">
                 <p>Username or Email Address</p>
-                <input type="text">
+                <input type="text" id="username">
                 <p>Password</p>
-                <input type="text"><br><br>
-                <input type="submit">
+                <input type="text" id="password"><br><br>
             </form>
+
+            <button type="click" onclick="return login()">Submit</button>
 
             <p>Don't have an account? <a href="#" target="_self">Register here</a></p>
         </div>
