changed location of image and added img directory

--- a/html/createAccount.html
+++ b/html/createAccount.html
@@ -6,7 +6,7 @@ body, html{
   height: 100%;
 }
 .bg{
-  background-image: url("studying.jpg");
+  background-image: url("../img/studying.jpg");
   height: 100%;
   background-position: center;
   background-repeat: no-repeat;
