changed over css for login pages and linked login with create account

--- a/html/account.html
+++ b/html/account.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Account Home</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="../css/account.css">
+    <link rel="stylesheet" type="text/css" media="screen" href="../css/index.css">
     <script src="../js/account.js"></script>
 </head>
 <body>
