--- a/html/createAccount.html
+++ b/html/createAccount.html
@@ -1,32 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<style>
-body, html{
-  height: 100%;
-}
-.bg{
-  background-image: url("../img/studying.jpg");
-  height: 100%;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-}
-body{
-  background-size: auto;
-}
-h2 {
-	text-align: center;
-}
-form{
-	text-align: center;
-  background-color: cornflowerblue;
-  width: 300px;
-  padding: 25px;
-  margin: 25px;
-}
-
-</style>
+  <link rel="stylesheet" type="text/css" media="screen" href="../css/index.css">
 </head>
 <body>
 <div class="bg">
