--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
             <button type="click" onclick="return login()">Submit</button>
 
-            <p>Don't have an account? <a href="#" target="_self">Register here</a></p>
+            <p>Don't have an account? <a href="./html/createAccount.html" target="_self">Register here</a></p>
         </div>
     </div>
 </body>
