one of my final attempts before I give up

--- a/html/createAccount.html
+++ b/html/createAccount.html
@@ -28,8 +28,7 @@
     <br>
     <br>
     <button type="submit" class="btn">Login</button>
-    <br>
-    <a class="Login" href="#">Have an Account? Login Here</a>
+    <p>Have an Account?<a class="Login" href="../index.html">Login Here</a></p>
   </form>
 </div><!--end log form -->
   
