Sorted files to get it all to work using IIS

--- a/fileStorage/html/addClass.html
+++ b/fileStorage/html/addClass.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8">
@@ -24,7 +24,6 @@
                     Last: <input required type="text" name="profLName" id="profLName"></p>
                 <input type="submit" value="Add Class">
             </form>
-
         </div>
     </div>
 </body>
