forgot to change a link

--- a/fileStorage/html/account.html
+++ b/fileStorage/html/account.html
@@ -17,7 +17,7 @@
         <h1>You have logged in, thank you for being our friend :)</h1>
         <div class="admin" id="adminLinks">
             <h2>Admin Functions</h2>
-            <a href="./addClass.html">Add a class</a>
+            <a href="./adminAddClass.html">Add a class</a>
         </div>
         <div class="user" id="userLinks">
             <h2>User Functions</h2>
