fixed one more js link

--- a/fileStorage/html/adminAddClass.html
+++ b/fileStorage/html/adminAddClass.html
@@ -6,7 +6,7 @@
     <title>Create Class</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="../css/index.css">
-    <script src="../js/admminAddClass.js"></script>
+    <script src="../js/adminAddClass.js"></script>
     <script type="text/javascript" src="http://code.jquery.com/jquery-1.7.1.min.js"></script>
 </head>
 <body>
