added view classes functionality. Still building

--- a/fileStorage/html/account.html
+++ b/fileStorage/html/account.html
@@ -24,7 +24,7 @@
             <a href="./viewClasses.html">View class notes</a>
         </div>
         <div>
-            <a href="./allClasses.html">View All Active Classes</a>
+            <a href="./viewClasses.html">View All Active Classes</a>
         </div>
     </div>
 </body>
