--- a/fileStorage/html/account.html
+++ b/fileStorage/html/account.html
@@ -21,7 +21,7 @@
         </div>
         <div class="user" id="userLinks">
             <h2>User Functions</h2>
-            <a href="./viewClasses.html">View class notes</a>
+            <a href="./addClassStudent.html">View class notes</a>
         </div>
         <div>
             <a href="./viewClasses.html">View All Active Classes</a>
