Added Admin ability to view and approve/deny requests

--- a/fileStorage/html/account.html
+++ b/fileStorage/html/account.html
@@ -19,6 +19,7 @@
         <div class="admin" id="adminLinks">
             <h2>Admin Functions</h2>
             <a href="./adminAddClass.html">Add a class</a>
+            <a href="./viewRequests.html">View pending requests</a>
         </div>
         <div class="user" id="userLinks">
             <h2>User Functions</h2>
