--- a/fileStorage/html/classRepo.html
+++ b/fileStorage/html/classRepo.html
@@ -8,7 +8,7 @@
 <body>
     <div class="file-upload-container">
         <input type="file" id="fileUpload" multiple />
-        <label for="fileUpload" class="upload-button-mask">Upload</label>
+        <label for="fileUpload" class="upload-mask-button">Upload</label>
     </div>
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"
             integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
