Changed adminAddClass stuff to just addClass that works for both users and admin, but doesn't approve student adds

--- a/fileStorage/html/account.html
+++ b/fileStorage/html/account.html
@@ -18,7 +18,7 @@
         <h1>You have logged in, thank you for being our friend :)</h1>
         <div class="admin" id="adminLinks">
             <h2>Admin Functions</h2>
-            <a href="./adminAddClass.html">Add a class</a>
+            <a href="./addClass.html">Add a class</a>
             <a href="./viewRequests.html">View pending requests</a>
         </div>
         <div class="user" id="userLinks">
@@ -43,7 +43,7 @@
             <br>
             <br>
             <a href="addClass.html">Can't find you're class? Request to add it here!</a>
-            <a href="./addClassStudent.html">View class notes</a>
+            <a href="#">View class notes</a>
         </div>
         <div>
             <a href="./viewClasses.html">View All Active Classes</a>
