--- a/fileStorage/index.html
+++ b/fileStorage/index.html
@@ -15,7 +15,8 @@
     </header>
     <div class="bg">
         <div class="form" align="center">
-            <h2>Log In Here</h2>
+			<h1>Note Repository System<h1/>
+            <h2>Log In</h2>
             <p class="form-p">Username or Email Address</p>
             <input type="text" id="username">
             <p class="form-p">Password</p>
