Added admin function for alert when class has been requested

--- a/fileStorage/html/account.html
+++ b/fileStorage/html/account.html
@@ -18,8 +18,8 @@
         <h1>You have logged in, thank you for being our friend :)</h1>
         <div class="admin" id="adminLinks">
             <h2>Admin Functions</h2>
-            <a href="./addClass.html">Add a class</a>
-            <a href="./viewRequests.html">View pending requests</a>
+            <p><a href="./addClass.html">Add a class</a></p>
+            <p><a href="./viewRequests.html" id="requestLink">View pending requests</a></p>
         </div>
         <div class="user" id="userLinks">
             <h2>User Functions</h2>
@@ -42,8 +42,8 @@
             <div id="error"></div>
             <br>
             <br>
-            <a href="addClass.html">Can't find you're class? Request to add it here!</a>
-            <a href="#">View class notes</a>
+            <p><a href="addClass.html">Can't find you're class? Request to add it here!</a></p>
+            <p><a href="#">View class notes</a></p>
         </div>
         <div>
             <a href="./viewClasses.html">View All Active Classes</a>
